Thu Mar 26 11:51:09 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (str_dump): new method.

	* eval.c (block_pass): block argument can be nil, which means no
	  block is supplied for the method.

Wed Mar 25 21:20:13 1998  Tadayoshi Funaba  <tadf@kt.rim.or.jp>

	* string.c (str_reverse_bang): string copied to wrong place.

Wed Mar 25 08:12:07 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* numeric.c (flo_modulo): caused SEGV if left operand is not a
 	  float value.

	* eval.c (f_eval): optional third and fourth argument to specify
	  file name and line number.

	* eval.c (eval): filename and linenumber set properly.

	* parse.y (assign_in_cond): literal assignment is now warning, not 
	  compile error.

	* error.c (Warn): Warn() always print message, OTOH Waring()
	  prints when verbose flag is set.

Tue Mar 24 12:50:06 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.c (ruby_prog_init): `.' should come last in the load-path.

	* eval.c (Init_eval): `__send__', alias for `send'.

Mon Mar 23 12:44:12 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (str_chomp_bang): now takes `rs' as an argument.

	* eval.c (thread_free): main_thread should not be freed.

Fri Mar 20 16:40:34 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (str_chomp_bang): chomp! (and other ! methods) returns
 	  nil if it does not modify the string.

	* string.c (str_sub_iter_s): should check last pattern since it
	  may be matched to null.

Thu Mar 19 13:48:55 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_04.

	* parse.y (yylex): `10e0.9' should cause syntax error.

Wed Mar 18 17:46:31 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.c (load_file): new file object constant DATA.  Only
	  available for the script from the file.

	* regex.c (re_match): forwading failure point popped too much. 

Tue Mar 17 18:23:06 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* math.c (math_frexp): newly added.
