@@ -1,5 +1,7 @@
 Thu Mar 26 11:51:09 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
+	* eval.c (rb_call): new feature: `protected' methods.
+
 	* string.c (str_dump): new method.
 
 	* eval.c (block_pass): block argument can be nil, which means no
